import java.util.List;
import java.util.Stack;

public class Deck{
    private List<Card> drawPile;
    private Stack<Card> discardPile;


    public void shuffle(){

    }

    public Card draw(){

    }

    public void discard(Card:card){

    }

    public Card peekTop(){
        
    }
}