import java.util.List;
public class Game{
    private List<Player> players;
    private int currentPlayerIndex;
    private boolean isClockwise;
    private Deck deck;


    public void startGame(){

    }

    public void nextTurn(){

    }
    public boolean playCard(Player player, Card card){

    }

    public void drawCard(Player player){
        
    }

}